# Cortex-Persist

./: .codecov.yml  .cursorrules  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .tmp_profile.json  .tmp_search.json  .vercelignore  007bbfb7.fuckchatgpt.cortex.4294b4ce-9480-4317-84bd-94c4c148f090.recording.jsonl  404.html  AGENTS.md  AUDITORIA_SEGURIDAD_GITHUB.md  AUTODIDACT_10_CICLOS.md  AUTODIDACT_AGENTE_PRINCIPAL.md  AUTODIDACT_APEX_100.md  AUTODIDACT_AUTOPOIESIS-SMTE.md  AUTODIDACT_BILT_LETTA.md  AUTODIDACT_C5_REAL_PRIMITIVES.md  AUTODIDACT_CAUSALIDAD_100.md  AUTODIDACT_DESIGN_TOKENS_B10.md  AUTODIDACT_EXERGY_100_PIPELINE.md  AUTODIDACT_EXERGY_INFORMATION.md  AUTODIDACT_FABLE_5_BABYLON_60.md  AUTODIDACT_FEP_100_PRIMITIVES.md  AUTODIDACT_FREE_ENERGY_PRINCIPLE.md  AUTODIDACT_GEMINI_1_5.md  AUTODIDACT_GEMINI_UPDATE.md  AUTODIDACT_GIT_EXERGY_AI.md  AUTODIDACT_GPT55_CYBER.md  AUTODIDACT_INFO_THEORY.md  AUTODIDACT_KOLMOGOROV_AST_DISTILLATION.md  AUTODIDACT_LEGION_ISOMORPHISMS.md  AUTODIDACT_LIMERENCIA.md  AUTODIDACT_LOCAL_AGENTIC_WORKFLOW.md  AUTODIDACT_MOE.md  AUTODIDACT_MOSKV1_APEX_CAPABILITIES.md  AUTODIDACT_MYTHOS_PRIMITIVES.md  AUTODIDACT_NETWORK.md  AUTODIDACT_PERPLEXITY_FILTERING.md  (+1072 more)
.astro/: settings.json
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.githooks/: pre-push
.github/: CHANGELOG.md  CODEOWNERS  METRICS.md  NOTES.md  STATUS.md  VERSION  dependabot.yml  mlc_config.json  pull_request_template.md
.playwright-cli/: page-2026-03-27T21-32-54-643Z.yml  page-2026-03-27T21-33-50-154Z.yml
.quarantine_tests/: test_audit_ledger.py  test_frontier_stress.py  test_pes_benchmark.py  test_taint_enforcement.py
.scratch/: purge_conflicts.py
20_VAULT/: cortex_cognitive_system_manifesto.md
300-blues/: index.html
3d-agent/: index.html
ANTI_GRAVITY/: inventory.yaml
AUTOPOIESIS_HITO_12/: index.html
AUTOPOIESIS_HITO_13/: index.html
AUTOPOIESIS_HITO_14/: index.html
AUTOPOIESIS_HITO_15/: index.html
AXIOMS/: index.html
CONTRIBUTING/: index.html
CORTEX-CAPABILITIES/: index.html
CORTEX_ARCHITECTURE_WHITEPAPER/: index.html
CORTEX_ATTACK_SURFACE_ECONOMICS/: index.html
CORTEX_AUDIT_MANIFEST/: index.html
CORTEX_BILLING_CORE/: index.html
CORTEX_KERNEL_SPEC/: index.html
CORTEX_OBSERVABILITY_KERNEL/: index.html
CORTEX_RUNTIME_LOOP/: index.html
DISASTER_RECOVERY/: index.html
ERROR-CODE-REGISTRY/: index.html
EVENT-MODEL/: index.html
EXERGY_CONSOLIDATION_20260611/: index.html
EXPORT-CANONICAL-JSON/: index.html
IMMUNITY-LAYER/: index.html
cortex_core_rs/: Cargo.toml
cortex_core_rs/src/: causal.rs  fixed60.rs  lib.rs  shim.rs  topology.rs
cortex_core_rs/src/edg/: delta_engine.rs  graph.rs  mod.rs
cortex_core_rs/src/mtk/: ast_parser.rs  authorizer.rs  mod.rs
cortex_merkle_rewrite/: Cargo.toml
cortex_merkle_rewrite/src/: audit.rs  engine.rs  heuristics.rs  lib.rs
engine-rs/: Cargo.toml  pyproject.toml
engine-rs/src/: lib.rs  main.rs  smte.rs
sdks/mac-maestro/: README.md  pyproject.toml
sdks/mac-maestro/src/mac_maestro/: __init__.py  errors.py  matcher.py  models.py  runtime.py  safety.py  trace.py
sdks/mac-maestro/src/mac_maestro/backends/: __init__.py  mock.py  protocol.py
sdks/mac-maestro/tests/: test_matcher.py  test_runtime_mock.py  test_safety.py
(+11296 files in other folders)
