[package]
name = "cortex_core_rs"
version = "0.1.0"
edition = "2021"
authors = ["Borja Moskv"]

[lib]
name = "cortex_core_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py310"] }
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustpython-parser = "0.3.1"
rusqlite = { version = "0.31", features = ["bundled"] }
petgraph = "0.6"
