[package]
name = "cortex_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "cortex_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "moskv_10k_swarm"
path = "src/main.rs"

[features]
# Enables the PyO3 extension-module linker mode (required for cdylib Python extension).
# maturin passes this automatically; cargo build (for the binary) omits it.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.22", optional = true }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = "0.4.44"
